# Python_Practicing

./: 3.1-3_Introduction_Lists.py  3.4-7_Introduction_Lists.py  3.8-11_Introduction_Lists.py  4.3-9_Working_with_Lists.py  6.1-3_Dictionaries.py  6.7-12_Nesting.py  8.1-2_Functions.py  8.3-5_Functions.py  8.6-8_Functions.py  8.9-10_Functions.py  Classes_9_162.py  Classes_9_167.py  Classes_9_173.py  Classes_9_180.py  Classes_9_181.py  Files_and_exceptions_10_191.py  Files_and_exceptions_10_193.py  Files_and_exceptions_10_202.py  Files_and_exceptions_10_208.py  Testing_your_code_215.py  Testing_your_code_221.py  Testing_your_code_221_test.py  functions_8_146.py  functions_8_150.py  functions_8_155.py  pyproject.toml
Basics/: 3.4-7_Introduction_Lists.py  4.1-2_Working_with_Lists.py  4.10-12_Working_with_Lists.py  4.13_Tuples.py  5.1-2_If_Statments.py  5.3-7_If_Statments.py  5.8-11_Using if Statements with Lists.py  6.4-6_Dictionaries.py  7.1-3_User input and while loops.py  7.4-7_User input and while loops.py  7.8-9_User input and while loops.py  Classes_9_167.py  Classes_9_173.py  Classes_9_181.py  Files_and_exceptions_10_191.py  Files_and_exceptions_10_193.py  Files_and_exceptions_10_202.py  Files_and_exceptions_10_208.py  Functions_8_155.py  Testing_your_code_11_221_test.py
Projects/Project_I_Alien_Invasion/Images/: Image_doc.text
Python_Crash_Course_material/chapter_10/: Guest_book.txt  cats.txt  code_everyday.txt
text_files/: 10_10.txt  Guest_book.txt  Programing_poll.txt  dogs.txt  programming.txt  username.json
(+9 files in other folders)
