[tool.poetry]
name = "Python_Practicing"
version = "0.1.0"
description = ""
authors = ["Tiago Reis <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pygame = "2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
